--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -222,7 +222,7 @@ verbatim: |
     rm Dockerfile.cross
 
   .PHONY: build-installer
-  build-installer: kustomize generate license-headers manifests
+  build-installer: kustomize generate manifests
     mkdir -p dist
     cd config/manager && $(KUSTOMIZE) edit set image controller=${IMG}
     $(KUSTOMIZE) build config/default > dist/install.yaml
