--- a/.github/workflows/publish-chart.yml
+++ b/.github/workflows/publish-chart.yml
@@ -60,7 +60,11 @@ jobs:
 
       - name: Make Helm chart
         run: |
-          make helm-chart
+          echo $PATH
+          echo $GOPATH
+          make install-addlicense
+          which addlicense
+          PATH="$PATH:$GOPATH/bin" make helm-chart
 
       - name: Install yq
         run: |
