Separate helm-chart makefile target to be run only locally due to limitations with helm/v2-alpha

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -235,7 +235,7 @@ verbatim: |
     sed -i 's#credentials\.json: ""#credentials.json: {{ toJson .Values.credentials | quote }}#' dist/chart/templates/extras/secret.yaml # to replace the placeholder in the generated chart with the actual value from values.yaml
 
   .PHONY: helm-lint
-  helm-lint: helm helm-chart
+  helm-lint: helm
     "$(HELM)" lint dist/chart
 
   .PHONY: set-image
@@ -248,11 +248,11 @@ verbatim: |
     "$(KUBECTL)" create namespace argora-system || true
 
   .PHONY: helm-build-local-image
-  helm-build-local-image: helm-chart helm-lint
+  helm-build-local-image: helm-lint
     "$(HELM)" template -n argora-system dist/chart > dist/install.yaml
 
   .PHONY: helm-build
-  helm-build: set-image helm-chart helm-lint
+  helm-build: set-image helm-lint
     "$(HELM)" template -n argora-system dist/chart > dist/install.yaml
 
   .PHONY: install-crd
