install crds per values flag

--- a/Makefile.maker.yaml
+++ b/Makefile.maker.yaml
@@ -244,7 +244,7 @@ verbatim: |
     yq -i '.controllerManager.container.image.tag="$(IMG_TAG)"' dist/chart/values.yaml
 
   .PHONY: prepare-deploy
-  prepare-deploy: install-crd
+  prepare-deploy:
     "$(KUBECTL)" create namespace argora-system || true
 
   .PHONY: helm-build-local-image
